# OmicVerse-OmicBench

./: .gitignore  LICENSE  Makefile  README.md  bench-env.template.sh  pyproject.toml
analysis/: README.md  bench_cost.py  cost_chart.py  cost_chart_html.py  cost_summary.csv  cost_vs_score.html  native_dim_map.csv  ovagent_radar_native.html  radar_grade.py  radar_grades.jsonl  radar_native.py  radar_native_html.py
baselines/: A01_qc_filter.py  A02_normalize_log.py  A03_hvg.py  A04_pca_neighbors_umap.py  A05_leiden_clustering.py  B01_full_pipeline.py  B02_subset_recluster.py  B03_diff_expression.py  B04_multi_method_batch_correction.py  B05_multi_method_annotation.py  F01_multi_mode_velocity.py  F02_multi_method_trajectory.py  G01_16s_diversity.py  README.md
bench/: __init__.py  _paths.py  config.py  failure_taxonomy.py  figures.py  grade_run.py  grader.py  report.py  runner.py  stats.py  tasks.py  types.py
bench/adapters/: __init__.py  gpt_oauth_model.py  human_scanpy.py  mini_swe.py  persistent_env.py
configs/: README.md  ablation_gpt_doc_rag.yaml  ablation_gpt_no_registry.yaml  ablation_v4flash_doc_rag.yaml  ablation_v4flash_no_registry.yaml  deepseek_full.yaml  deepseek_v4_pro_full.yaml  full_v1.yaml  gemini_full.yaml  glm_full.yaml  gpt_full.yaml  minimax_full.yaml  multiseed_full_v1.yaml
docs/: 05_changelog.md
notebooks/: 04_results_publication.ipynb
omicverse_components/: _ovagent_lookup.py
omicverse_components/ovagent/: prompt_builder.py  registry_scanner.py  tool_runtime_exec.py  tool_runtime_workspace.py
prompts/: omicverse_system.md  omicverse_system_doc_rag.md  omicverse_system_no_registry.md
results/ablation_gpt_doc_rag/: grades.csv  summary.md
results/ablation_gpt_no_registry/: grades.csv  summary.md
results/ablation_v4flash_doc_rag/: grades.csv  summary.md
results/ablation_v4flash_no_registry/: grades.csv  summary.md
results/deepseek_v4_pro_full/: grades.csv  summary.md
results/deepseek_v4flash_canonical/: grades.csv  summary.md
results/gemini_full/: grades.csv  summary.md
results/glm_full/: grades.csv  summary.md
results/gpt_full_canonical/: grades.csv  summary.md
scripts/: analyze.sh  build_doc_rag_index.py  build_task_md.py  doc_lookup.py  fetch_omicbench.sh  grade.sh  per_check_detail.py  per_check_report.py  run.sh
(+4 files in other folders)
